--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.2",
+    "react-textarea-autosize": "^8.3.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
