--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kcshifflcom",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kcshiffl.github.io/kcshifflcom",
+  "homepage": "http://kcshiffl.github.io/kcshifflcom",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
